--- a/hsh.cabal
+++ b/hsh.cabal
@@ -33,6 +33,7 @@ library
   build-depends:
       base >=4.7 && <5
     , directory >=1.3.6
+    , filepath >=1.4.2.1
     , hint >=0.9
   default-language: Haskell2010
 
@@ -46,6 +47,7 @@ executable hsh-exe
   build-depends:
       base >=4.7 && <5
     , directory >=1.3.6
+    , filepath >=1.4.2.1
     , hint >=0.9
     , hsh
   default-language: Haskell2010
@@ -61,6 +63,7 @@ test-suite hsh-test
   build-depends:
       base >=4.7 && <5
     , directory >=1.3.6
+    , filepath >=1.4.2.1
     , hint >=0.9
     , hsh
   default-language: Haskell2010
