--- a/hsh.cabal
+++ b/hsh.cabal
@@ -32,8 +32,8 @@ library
       src
   build-depends:
       base >=4.7 && <5
-    , directory >=1.3.6
-    , filepath >=1.4.2.1
+    , directory >=1.3.6 && <1.4
+    , filepath >=1.4.2.1 && <1.5
     , hint >=0.9
   default-language: Haskell2010
 
@@ -46,8 +46,8 @@ executable hsh-exe
   ghc-options: -threaded -rtsopts -with-rtsopts=-N
   build-depends:
       base >=4.7 && <5
-    , directory >=1.3.6
-    , filepath >=1.4.2.1
+    , directory >=1.3.6 && <1.4
+    , filepath >=1.4.2.1 && <1.5
     , hint >=0.9
     , hsh
   default-language: Haskell2010
@@ -62,8 +62,8 @@ test-suite hsh-test
   ghc-options: -threaded -rtsopts -with-rtsopts=-N
   build-depends:
       base >=4.7 && <5
-    , directory >=1.3.6
-    , filepath >=1.4.2.1
+    , directory >=1.3.6 && <1.4
+    , filepath >=1.4.2.1 && <1.5
     , hint >=0.9
     , hsh
   default-language: Haskell2010
