--- a/package.yaml
+++ b/package.yaml
@@ -22,8 +22,8 @@ description:         Please see the README on GitHub at <https://github.com/gith
 dependencies:
 - base >= 4.7 && < 5
 - hint >= 0.9
-- directory >= 1.3.6
-- filepath >= 1.4.2.1
+- directory >= 1.3.6 && < 1.4
+- filepath >= 1.4.2.1 && < 1.5
 
 library:
   source-dirs: src
