--- a/hsh.cabal
+++ b/hsh.cabal
@@ -32,9 +32,11 @@ library
       src
   build-depends:
       base >=4.7 && <5
+    , containers >=0.6.0.0 && <0.7
     , directory >=1.3.6 && <1.4
     , filepath >=1.4.2.1 && <1.5
     , hint >=0.9
+    , vformat >=0.14.1.0 && <0.15
   default-language: Haskell2010
 
 executable hsh-exe
@@ -46,10 +48,12 @@ executable hsh-exe
   ghc-options: -threaded -rtsopts -with-rtsopts=-N
   build-depends:
       base >=4.7 && <5
+    , containers >=0.6.0.0 && <0.7
     , directory >=1.3.6 && <1.4
     , filepath >=1.4.2.1 && <1.5
     , hint >=0.9
     , hsh
+    , vformat >=0.14.1.0 && <0.15
   default-language: Haskell2010
 
 test-suite hsh-test
@@ -62,8 +66,10 @@ test-suite hsh-test
   ghc-options: -threaded -rtsopts -with-rtsopts=-N
   build-depends:
       base >=4.7 && <5
+    , containers >=0.6.0.0 && <0.7
     , directory >=1.3.6 && <1.4
     , filepath >=1.4.2.1 && <1.5
     , hint >=0.9
     , hsh
+    , vformat >=0.14.1.0 && <0.15
   default-language: Haskell2010
