--- a/package.yaml
+++ b/package.yaml
@@ -24,6 +24,8 @@ dependencies:
 - hint >= 0.9
 - directory >= 1.3.6 && < 1.4
 - filepath >= 1.4.2.1 && < 1.5
+- vformat >= 0.14.1.0 && < 0.15
+- containers >= 0.6.0.0 && < 0.7
 
 library:
   source-dirs: src
