--- a/hsh.cabal
+++ b/hsh.cabal
@@ -34,6 +34,7 @@ library
       base >=4.7 && <5
     , containers >=0.6.0.0 && <0.7
     , directory >=1.3.6 && <1.4
+    , exceptions >=0.10.4 && <0.11
     , filepath >=1.4.2.1 && <1.5
     , hint >=0.9
     , vformat >=0.14.1.0 && <0.15
@@ -50,6 +51,7 @@ executable hsh-exe
       base >=4.7 && <5
     , containers >=0.6.0.0 && <0.7
     , directory >=1.3.6 && <1.4
+    , exceptions >=0.10.4 && <0.11
     , filepath >=1.4.2.1 && <1.5
     , hint >=0.9
     , hsh
@@ -68,6 +70,7 @@ test-suite hsh-test
       base >=4.7 && <5
     , containers >=0.6.0.0 && <0.7
     , directory >=1.3.6 && <1.4
+    , exceptions >=0.10.4 && <0.11
     , filepath >=1.4.2.1 && <1.5
     , hint >=0.9
     , hsh
