--- a/package.yaml
+++ b/package.yaml
@@ -26,6 +26,7 @@ dependencies:
 - filepath >= 1.4.2.1 && < 1.5
 - vformat >= 0.14.1.0 && < 0.15
 - containers >= 0.6.0.0 && < 0.7
+- exceptions >= 0.10.4 && < 0.11
 
 library:
   source-dirs: src
