--- a/package.yaml
+++ b/package.yaml
@@ -27,6 +27,7 @@ dependencies:
 - vformat >= 0.14.1.0 && < 0.15
 - containers >= 0.6.0.0 && < 0.7
 - exceptions >= 0.10.4 && < 0.11
+- pretty-simple >= 4.0.0.0 && < 5.0.0.0
 
 library:
   source-dirs: src
